<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LimeSurvey</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="SETTING">Setting</string>
    <string name="SELECT_SURVEY">Select Survey</string>
    <string name="GLOBAL_URL">Global URL</string>
    <string name="ADD">Add</string>
    <string name="EDIT">Edit</string>
    <string name="SAVE">save</string>
    <string name="ID">Id</string>
    <string name="NAME">Name</string>
    <string name="URL">URL</string>
    <string name="IMEI">IMEI</string>
    <string name="respondent_id">Respondent ID</string>
    <string name="OPEN_BROWSER">Open Browser</string>
    <string name="enter_global_url">Enter Global Url</string>
    <string name="survey_id">Survey Id</string>
    <string name="submit">Submit</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="latitude">"Latitude "</string>
    <string name="longitude">Longitude</string>

</resources>